...
                error)
          })
    }
  }

  Scaffold(
      modifier = Modifier.testTag("addTrip"),
      topBar = {
        if (!isEditMode)
            TopAppBar(
                title = {
                  Text(stringResource(R.string.create_trip), Modifier.testTag("addTripTitle"))
                },
                navigationIcon = {
                  IconButton(
                      onClick = { navigationActions.goBack() }, Modifier.testTag("goBackButton")) {
                        Icon(
                            imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
...
                Box(
                    modifier =
                        Modifier.fillMaxWidth()
                            .height(imageHeight)
                            .aspectRatio(1.78f)
                            .clip(RoundedCornerShape(5.dp))
                            .testTag("imageContainer")) {
                      if (imageUri.isNotEmpty()) {
                        Image(
                            painter = rememberAsyncImagePainter(model = imageUri),
                            contentDescription = stringResource(R.string.selected_image),
                            contentScale = ContentScale.Crop,
                            modifier = Modifier.fillMaxSize())
...
                OutlinedTextField(
                    value = name,
                    onValueChange = { name = it },
                    isError = name.isEmpty(),
                    label = { Text(stringResource(R.string.trip_title)) },
                    placeholder = { Text(stringResource(R.string.name_trip)) },
                    modifier = Modifier.fillMaxWidth().testTag("inputTripTitle"),
                    keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done),
                    keyboardActions = KeyboardActions(onDone = { keyboardController?.hide() }),
                    singleLine = true)

                Spacer(modifier = Modifier.height(2.dp))
                if (isEditMode) {
...

                OutlinedTextField(
                    value = description,
                    onValueChange = { description = it },
                    label = { Text(stringResource(R.string.trip_description)) },
                    placeholder = { Text(stringResource(R.string.describe_trip)) },
                    modifier = Modifier.fillMaxWidth().testTag("inputTripDescription"))

                Spacer(modifier = Modifier.height(2.dp))

                PlaceSearchWidget(
                    placesViewModel = placesViewModel,
                    onSelect = { location ->
...
                      label = { Text(stringResource(R.string.start_date)) },
                      colors =
                          TextFieldDefaults.colors(
                              disabledContainerColor = Color.Transparent,
                              disabledTextColor = MaterialTheme.colorScheme.onSurface),
                      modifier =
                          Modifier.fillMaxWidth(0.49f).testTag("inputStartDate").clickable {
                            selectedDateField = DateField.START
                            showModal = true
                          })

                  OutlinedTextField(
                      value = formattedEndDate,
...
                      label = { Text(stringResource(R.string.end_date)) },
                      colors =
                          TextFieldDefaults.colors(
                              disabledContainerColor = Color.Transparent,
                              disabledTextColor = MaterialTheme.colorScheme.onSurface),
                      modifier =
                          Modifier.fillMaxWidth(0.49f).testTag("inputEndDate").clickable {
                            selectedDateField = DateField.END
                            showModal = true
                          })
                }

                if (showModal) {
...

                Spacer(modifier = Modifier.height(2.dp))

                ExposedDropdownMenuBox(
                    expanded = expanded,
                    onExpandedChange = { expanded = !expanded },
                    modifier = Modifier.testTag("tripTypeDropdown")) {
                      TextField(
                          value = tripType.name.lowercase().replaceFirstChar { it.uppercase() },
                          onValueChange = {},
                          readOnly = true,
                          label = { Text(stringResource(R.string.select_trip_type)) },
                          trailingIcon = {
                            ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded)
                          },
                          modifier = Modifier.fillMaxWidth().menuAnchor().testTag("inputTripType"))
                      ExposedDropdownMenu(
                          expanded = expanded,
                          onDismissRequest = { expanded = false },
                          modifier = Modifier.testTag("expandedDropdownTrips")) {
                            TripType.entries.forEach { type ->
                              DropdownMenuItem(
                                  text = {
                                    Text(
                                        text =
                                            type.name.lowercase().replaceFirstChar {
...
              },
              enabled =
                  name.isNotBlank() &&
                      formattedStartDate.isNotBlank() &&
                      formattedEndDate.isNotBlank() &&
                      !isSaving,
              modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("tripSave")) {
                Text(stringResource(R.string.save_trip))
              }
        }
      }
}
// enum for the two different dates: start and end
...
