...
    <string name="created_draft">No date assigned, created as draft</string>
    <string name="default_end_time">No end time selected, defaults to 23:59</string>
    <string name="fail_add_activity">Failed to add/edit activity: %1$s</string>
    <string name="error_add_activity">Error adding/editing activity: %1$s</string>

 <!-- Time Pickers -->
    <string name="ok">OK</string>
    <string name="select_time">Select time</string>

 <!-- Add Trip -->
    <string name="create_trip">Create a New Trip</string>
    <string name="selected_image">Selected Image</string>
    <string name="default_image">Default trip image</string>
    <string name="select_image_gallery">Select Image from Gallery</string>
    <string name="access_gallery">This app needs access to your photos to allow you to select an image for your trip.</string>
    <string name="name_trip">Name the trip</string>
    <string name="trip_title">Trip *</string>
    <string name="describe_trip">Describe the trip</string>
    <string name="trip_description">Description</string>
    <string name="start_date">Start Date *</string>
    <string name="end_date">End Date *</string>
    <string name="business">Business</string>
    <string name="tourism">Tourism</string>
    <string name="save_trip">Save Trip</string>
    <string name="select_trip_type">Select Trip Type</string>
    <string name="select_both_dates">Please select both start and end dates</string>
    <string name="dates_must_not_be_in_past">Start and end dates cannot be in the past</string>
    <string name="end_date_not_in_past">End date cannot be in the past</string>
    <string name="end_after_start">End date cannot be before start date</string>
...
