...
    OutlinedTextField(
        value = query,
        onValueChange = {
          onQueryChange(it, userLocation)
          expanded = it.text.isNotEmpty() && it.text != query.text
        },
        modifier = modifier.fillMaxWidth().testTag("searchTextField"),
        keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Search),
        keyboardActions = KeyboardActions(onSearch = { expanded = false }),
        singleLine = true,
        placeholder = { Text("Search places...") },
        trailingIcon = {
          if (query.text.isNotEmpty()) {
...
